# unipay-admincp

./: Cargo.toml  README.md  Rocket.toml
migrations/2020-08-28-132008_unipayv10/: up.sql
src/: applications.rs  main.rs  schema.rs
