[package]
name = "unipay-admincp"
version = "0.1.0"
authors = ["james <jamesfire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_mysql_pool"] }
diesel = "1.4.5"